--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "generator-gladeye-assets",
   "version": "0.1.0",
   "description": "",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kenvunz/generator-gladeye-assets.git"
+  },
   "main": "generators/app/index.js",
   "files": [
     "generators/app"
