--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "generators/app"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "keywords": [
     "yeoman-generator",
